<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton style="@style/ToggleButtonStyle"
        android:id="@+id/expandFiltersButton"
        android:textAppearance="@style/SubtitleTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/showFirstGroup"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="showFirstText,showFirstSelector" />

    <TextView style="@style/ElevatedLayout"
        android:id="@+id/showFirstText"
        android:textAppearance="@style/SubtitleTextAppearance"
        android:paddingHorizontal="@dimen/margin_4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_first_filter_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandFiltersButton" />

    <RadioGroup style="@style/ElevatedLayout"
        android:id="@+id/showFirstSelector"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showFirstText">

        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/newPostsRadioButton"
            android:checked="true"
            android:text="@string/new_posts_filter_label"/>
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/bestPostsRadioButton"
            android:text="@string/best_posts_filter_label" />
    </RadioGroup>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/periodGroup"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="periodSelector, periodSelectorText"/>

    <TextView style="@style/ElevatedLayout"
        android:id="@+id/periodSelectorText"
        android:textAppearance="@style/SubtitleTextAppearance"
        android:paddingHorizontal="@dimen/margin_4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/period_filter_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showFirstSelector" />

    <RadioGroup style="@style/ElevatedLayout"
        android:id="@+id/periodSelector"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodSelectorText">

        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/dailyRadioButton"
            android:checked="true"
            android:text="@string/day_filter_label" />
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/weeklyRadioButton"
            android:text="@string/week_filter_label"/>
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/monthlyRadioButton"
            android:text="@string/month_filter_label" />
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/yearlyRadioButton"
            android:text="@string/year_filter_label" />
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonStyle"
            android:id="@+id/allTimeRadioButton"
            android:text="@string/alltime_filter_label"/>
    </RadioGroup>


    <androidx.constraintlayout.widget.Group
        android:id="@+id/ratingGroup"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ratingSelector, ratingSelectorText"/>

    <TextView style="@style/ElevatedLayout"
        android:id="@+id/ratingSelectorText"
        android:textAppearance="@style/SubtitleTextAppearance"
        android:paddingHorizontal="@dimen/margin_4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_limit_filter_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showFirstSelector" />

    <RadioGroup style="@style/ElevatedLayout"
        android:id="@+id/ratingSelector"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingSelectorText">
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonExtraPaddingStyle"
            android:id="@+id/anyRatingRadioButton"
            android:checked="true"
            android:text="@string/any_rating_filter_label" />
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonExtraPaddingStyle"
            android:id="@+id/zeroPlusRadioButton"
            android:text="@string/zero_plus_filter_label"/>
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonExtraPaddingStyle"
            android:id="@+id/tenPlusRadioButton"
            android:text="@string/ten_plus_filter_label" />
        <androidx.appcompat.widget.AppCompatRadioButton style="@style/RadioButtonExtraPaddingStyle"
            android:id="@+id/twentyFivePlusRadioButton"
            android:text="@string/twentyfive_plus_filter_label" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView style="@style/PostRecyclerBackground"
        android:id="@+id/post_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/post_item_margin_vertical"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expandFiltersButton"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/post_item" />

</androidx.constraintlayout.widget.ConstraintLayout>